# routes/index.js
@@ -6,4 +6,8 @@ router.use("/users", require("./userRoutes"));
 
 router.use("/scores", require("./scoreRoutes"));
 
+router.use("/games", require("./gameRoutes"));
+
+router.use("/achievements", require("./acheivementRoutes"));
+
 module.exports = router;
